# neuro

./: CMakeLists.txt  license  main.cpp  readme.md
src/: builder.cpp  builder.h  connection.h  def.h  nerve.cpp  nerve.h  net.cpp  net.h  neural_net.cpp  neural_net.h  neuro_def.h  neuro_net.cpp  neuro_net.h  neuron.cpp  neuron.h  simple_builder.cpp  simple_builder.h
test/: simple_builder.cpp
test/unit/: builder.cpp  net.cpp  neural_net.cpp  neural_net.h
